--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,6 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "semi": false,
-  "parser":"typescript"
+  "semi": true,
+  "parser": "babel"
 }
