--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,11 @@
-{
+/* eslint-disable prefer-template */
+
+{  
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "/*" : ["src/*"]
-    }
+      "*": ["src/*"],
+      "components/*": ["src/components/*"],
+    },
   },
-  "include": ["."]
 }
