--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html -d build --public-url ./"
   },
-  "alias": {},
   "dependencies": {
     "@babel/polyfill": "^7.10.4",
     "components": "^0.1.0",
+    "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1"
@@ -21,9 +21,22 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "ajv": "6.12.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "css-loader": "^3.6.0",
-    "prettier": "^2.0.5",
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-babel-module": "^5.1.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "prettier": "2.0.5",
     "source-map-loader": "^1.0.1"
   },
   "babel": {
@@ -31,5 +44,19 @@
       "@babel/preset-env",
       "@babel/preset-react"
     ]
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint . --fix",
+      "prettier"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "eslint"
+    }
+  },
+  "alias": {
+    "components": "./src/components"
   }
 }
