기초값 추가

--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint . --fix",
-      "prettier"
+      "eslint",
+      "prettier --write"
     ]
   },
   "husky": {
