redux + redux hooks + store 기본구조 설정

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "semi": true,
-  "parser": "babel"
+  "parser": "babel",
+  "disableLanguages" : ["html"]
 }
