--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.10.4",
+    "classnames": "^2.2.6",
     "components": "^0.1.0",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-redux": "^7.2.0",
+    "react-scripts": "^3.4.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -53,10 +56,11 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
     }
   },
   "alias": {
-    "components": "./src/components"
+    "src": "./src",
+    "components": "./src/components",
+    "store": "./src/store"
   }
 }
