--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,8 @@
     "paths": {
       "src": ["src/*"],
       "components/*": ["src/components/*"],
-      "store/*": ["src/store/*"]
+      "store/*": ["src/store/*"],
+      "sagas/*": ["src/store/sagas/*"]
     },
   },
 }
