--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "^3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -55,12 +56,12 @@
     ]
   },
   "husky": {
-    "hooks": {
-    }
+    "hooks": {}
   },
   "alias": {
     "src": "./src",
     "components": "./src/components",
-    "store": "./src/store"
+    "store": "./src/store",
+    "sagas": "./src/store/sagas"
   }
 }
